--- a/dawei_blog/_config.yml
+++ b/dawei_blog/_config.yml
@@ -102,4 +102,6 @@ theme: landscape
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
-  type: ''
+  type: git
+  repo: github:https://github.com/hudawei996/hudawei996.github.io
+  branch: master
