--- a/_config.yml
+++ b/_config.yml
@@ -103,5 +103,6 @@ theme: landscape
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
   type: git
-  repo: github:https://github.com/hudawei996/hudawei996.github.io
+  repo: 
+    github: https://github.com/hudawei996/hudawei996.github.io
   branch: master
